--- a/css/style.css
+++ b/css/style.css
@@ -386,7 +386,6 @@ h6 {
   text-indent: -6px;
 }
 .text--big {
-  font-family: Lato;
   font-size: 36px;
   line-height: 43px;
   letter-spacing: 0em;
@@ -492,6 +491,11 @@ body {
   max-width: 1565px;
   padding: 0 20px;
   margin: 0 auto;
+}
+
+section {
+  position: relative;
+  top: 245px;
 }
 
 .link {
@@ -606,10 +610,6 @@ body {
   transform: translateX(-50%);
 }
 
-.main {
-  position: relative;
-  top: 245px;
-}
 .main__wrapper {
   display: flex;
   justify-content: space-between;
@@ -668,6 +668,132 @@ body {
   letter-spacing: 0em;
   text-align: left;
   align-self: flex-start;
+}
+
+.registration {
+  top: 230px;
+}
+.registration__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 120px;
+}
+.registration__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 30px;
+}
+.registration__title {
+  font-size: 64px;
+  line-height: 120.79%;
+}
+.registration__wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 46px;
+}
+.registration__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
+  min-width: 252px;
+  height: 66px;
+  background-color: #000000;
+  border-radius: 33px;
+}
+.registration__link span {
+  font-family: "Lato-BoldItalic";
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 120.79%;
+  color: #fff;
+}
+.registration__link svg {
+  width: 45px;
+  height: 45px;
+}
+.registration__box-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 240px;
+}
+.registration__inner {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+.registration__subtitle {
+  font-size: 40px;
+}
+.registration__text {
+  line-height: 122.79%;
+  max-width: 560px;
+}
+.registration__form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+  padding: 30px 30px 55px;
+  min-width: 467px;
+  height: 391px;
+  background-color: #000000;
+  border-radius: 50px;
+}
+.registration .form__subtitle {
+  font-size: 32px;
+  color: #fff;
+}
+.registration .form__box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+}
+.registration .form__wrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.registration .form__input {
+  width: 372px;
+  height: 48px;
+  border: 3px solid #868686;
+  background-color: transparent;
+  padding-left: 30px;
+}
+.registration .form__input:focus, .registration .form__input:focus-visible {
+  border-color: #0f2f2e;
+}
+.registration .form__input::placeholder, .registration .form__textarea::placeholder {
+  font-family: "Lato-Bold";
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 120.79%;
+  color: #959595;
+}
+.registration .form__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 372px;
+  height: 73px;
+  background: linear-gradient(92.21deg, #919eaf 0%, #07426a 100%);
+  border-radius: 267px;
+  font-family: "Lato-Regular";
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120.79%;
+  color: #fff;
 }
 
 .forms__wrapper {
@@ -824,7 +950,7 @@ body {
   position: fixed;
   width: 100%;
   z-index: 999;
-  padding: 40px 0;
+  padding: 20px 0;
 }
 .header__wrapper {
   display: flex;
@@ -850,7 +976,6 @@ body {
   justify-content: space-between;
   align-items: center;
   gap: 35px;
-  padding-bottom: 40px;
 }
 .header__subtitle {
   font-family: "Tuffy-Bold";
@@ -927,192 +1052,4 @@ body {
 }
 .open .nav__item {
   font-size: 12px;
-}
-.form {
-  display: flex;
-  flex-direction: column;
-}
-@media only screen and (min-width: 767px) {
-  .form {
-    flex-direction: row;
-    gap: 20px;
-  }
-}
-@media only screen and (min-width: 1279px) {
-  .form {
-    gap: 20px;
-  }
-}
-.form__box {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-@media only screen and (min-width: 767px) {
-  .form__box {
-    width: 50%;
-    gap: 20px;
-  }
-}
-@media only screen and (min-width: 767px) and (min-width: 1279px) {
-  .form__box {
-    gap: 20px;
-    width: 39%;
-  }
-}
-@media only screen and (min-width: 767px) {
-  .form__box--gap0 {
-    gap: 0;
-    width: 58%;
-  }
-}
-.form__wrap {
-  display: flex;
-  flex-direction: column;
-}
-.form__wrap--relative {
-  position: relative;
-  max-width: 400px;
-}
-.form__input {
-  padding-left: 30px;
-  width: 100%;
-  height: 40px;
-  min-width: 240px;
-  border: 2px solid #0F2F2E;
-  border-radius: 50px;
-  background-color: transparent;
-}
-@media only screen and (min-width: 767px) {
-  .form__input {
-    height: 50px;
-  }
-}
-@media only screen and (min-width: 1023px) {
-  .form__input {
-    height: 60px;
-    padding-left: 50px;
-    max-width: 400px;
-  }
-}
-.form__input:focus, .form__input:focus-visible {
-  border-color: #0F2F2E;
-}
-.form__input::placeholder, .form__textarea::placeholder {
-  font-family: "OnestMedium";
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 15px;
-  color: #0F2F2E;
-}
-@media only screen and (min-width: 1023px) {
-  .form__input::placeholder, .form__textarea::placeholder {
-    font-size: 16px;
-    line-height: 20px;
-  }
-}
-.form__rating-stars {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 95px;
-  position: absolute;
-  top: 50%;
-  right: 30px;
-  transform: translateY(-50%);
-}
-.form__rating-stars input {
-  display: none;
-}
-.form__rating-stars label {
-  width: 16px;
-  height: 16px;
-  background-color: rgba(0, 0, 0, 0.7333333333);
-  display: inline-flex;
-  cursor: pointer;
-  transition: all 1s ease 0s;
-  clip-path: polygon(50% 0%, 66% 32%, 100% 38%, 78% 64%, 83% 100%, 50% 83%, 17% 100%, 22% 64%, 0 38%, 34% 32%);
-}
-.form__rating-stars label[for=rs0] {
-  display: none;
-}
-.form__rating-stars label:before {
-  content: "";
-  display: block;
-  width: 90%;
-  height: 90%;
-  z-index: -1;
-  clip-path: polygon(50% 0%, 66% 32%, 100% 38%, 78% 64%, 83% 100%, 50% 83%, 17% 100%, 22% 64%, 0 38%, 34% 32%);
-  background: linear-gradient(90deg, #F7CC34, #F7CC34 30% 50%, #A1F1C6 50%, 70%, #A1F1C6 100%);
-  background-size: 205% 100%;
-  background-position: 0 0;
-}
-.form__rating-stars label:hover:before {
-  transition: all 0.25s ease 0s;
-}
-.form__rating-stars input:checked + label ~ label:before {
-  background-position: 100% 0;
-  transition: all 0.25s ease 0s;
-}
-.form__rating-stars input:checked + label ~ label:hover:before {
-  background-position: 0% 0;
-}
-.form__textarea {
-  min-width: 240px;
-  height: 120px;
-  border: 2px solid #0F2F2E;
-  border-radius: 20px;
-  background-color: transparent;
-  padding: 15px 30px;
-  resize: none;
-}
-@media only screen and (min-width: 1279px) {
-  .form__textarea {
-    max-width: 600px;
-    height: 140px;
-    padding: 20px 50px;
-    border-radius: 30px;
-  }
-}
-.form__inner {
-  display: flex;
-  flex-direction: column;
-}
-@media only screen and (min-width: 767px) {
-  .form__inner {
-    margin-top: 10px;
-  }
-}
-@media only screen and (min-width: 1023px) {
-  .form__inner {
-    flex-direction: row;
-    gap: 10px;
-    margin-top: 20px;
-  }
-}
-@media only screen and (min-width: 1279px) {
-  .form__inner {
-    gap: 30px;
-  }
-}
-.form__btn {
-  margin-bottom: 20px;
-}
-.form__text {
-  color: #fff;
-  text-align: left;
-}
-@media only screen and (min-width: 1023px) {
-  .form__text {
-    max-width: 240px;
-  }
-}
-@media only screen and (min-width: 1279px) {
-  .form__text {
-    font-size: 14px;
-    max-width: 340px;
-  }
-}
-.form__link {
-  text-decoration: underline !important;
 }
