--- a/src/scss/fonts/fonts.scss
+++ b/src/scss/fonts/fonts.scss
@@ -5,6 +5,7 @@
 	font-weight: 400;
 	font-style: normal;
 }
+
 @font-face {
 	font-family: "Tuffy-Bold";
 	font-display: swap;
@@ -47,140 +48,11 @@
 	font-weight: 400;
 	font-style: normal;
 }
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-Italic.woff2") format("woff2"), url("../fonts/Lato-Italic.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-Light.woff2") format("woff2"), url("../fonts/Lato-Light.woff") format("woff");
-	font-weight: 300;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-LightItalic.woff2") format("woff2"), url("../fonts/Lato-LightItalic.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-Medium.woff2") format("woff2"), url("../fonts/Lato-Medium.woff") format("woff");
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-MediumItalic.woff2") format("woff2"), url("../fonts/Lato-MediumItalic.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
 
 @font-face {
-	font-family: Lato;
+	font-family: "Inter-Regular";
 	font-display: swap;
-	src: url("../fonts/Lato-SemiBold.woff2") format("woff2"), url("../fonts/Lato-SemiBold.woff") format("woff");
-	font-weight: 600;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-Thin.woff2") format("woff2"), url("../fonts/Lato-Thin.woff") format("woff");
-	font-weight: 100;
-	font-style: normal;
-}
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-SemiBoldItalic.woff2") format("woff2"), url("../fonts/Lato-SemiBoldItalic.woff") format("woff");
+	src: url("../fonts/Inter-Regular.woff2") format("woff2"), url("../fonts/Inter-Regular.woff") format("woff");
 	font-weight: 400;
 	font-style: normal;
 }
-@font-face {
-	font-family: Lato;
-	font-display: swap;
-	src: url("../fonts/Lato-ThinItalic.woff2") format("woff2"), url("../fonts/Lato-ThinItalic.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: NotoSansArabic;
-	font-display: swap;
-	src: url("../fonts/NotoSansArabic-Black.woff2") format("woff2"), url("../fonts/NotoSansArabic-Black.woff") format("woff");
-	font-weight: 900;
-	font-style: normal;
-}
-@font-face {
-	font-family: NotoSansArabic;
-	font-display: swap;
-	src: url("../fonts/NotoSansArabic-Bold.woff2") format("woff2"), url("../fonts/NotoSansArabic-Bold.woff") format("woff");
-	font-weight: 700;
-	font-style: normal;
-}
-@font-face {
-	font-family: NotoSansArabic;
-	font-display: swap;
-	src: url("../fonts/NotoSansArabic-ExtraBold.woff2") format("woff2"), url("../fonts/NotoSansArabic-ExtraBold.woff") format("woff");
-	font-weight: 800;
-	font-style: normal;
-}
-@font-face {
-	font-family: NotoSansArabic;
-	font-display: swap;
-	src: url("../fonts/NotoSansArabic-ExtraLight.woff2") format("woff2"), url("../fonts/NotoSansArabic-ExtraLight.woff") format("woff");
-	font-weight: 200;
-	font-style: normal;
-}
-@font-face {
-	font-family: NotoSansArabic;
-	font-display: swap;
-	src: url("../fonts/NotoSansArabic-Light.woff2") format("woff2"), url("../fonts/NotoSansArabic-Light.woff") format("woff");
-	font-weight: 300;
-	font-style: normal;
-}
-@font-face {
-	font-family: NotoSansArabic;
-	font-display: swap;
-	src: url("../fonts/NotoSansArabic-Medium.woff2") format("woff2"), url("../fonts/NotoSansArabic-Medium.woff") format("woff");
-	font-weight: 500;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: NotoSansArabic;
-	font-display: swap;
-	src: url("../fonts/NotoSansArabic-SemiBold.woff2") format("woff2"), url("../fonts/NotoSansArabic-SemiBold.woff") format("woff");
-	font-weight: 600;
-	font-style: normal;
-}
-@font-face {
-	font-family: NotoSansArabic;
-	font-display: swap;
-	src: url("../fonts/NotoSansArabic-Thin.woff2") format("woff2"), url("../fonts/NotoSansArabic-Thin.woff") format("woff");
-	font-weight: 100;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: Tuffy;
-	font-display: swap;
-	src: url("../fonts/Tuffy-BoldItalic.woff2") format("woff2"), url("../fonts/Tuffy-BoldItalic.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-@font-face {
-	font-family: Tuffy;
-	font-display: swap;
-	src: url("../fonts/Tuffy-Italic.woff2") format("woff2"), url("../fonts/Tuffy-Italic.woff") format("woff");
-	font-weight: 400;
-	font-style: normal;
-}
-
